change main font to roboto, add linespacing in css and some css fixes

--- a/styles/main.css
+++ b/styles/main.css
@@ -132,7 +132,7 @@ width: 100vw;
 
 
 p { 
-    font-family: 'Courier New', Courier, monospace;
+    font-family: roboto;
 color: #180406;
 padding-left: 50px;
 padding-right: 50px;
@@ -143,6 +143,7 @@ justify-content:left;
 max-width: 700px;
 justify-content: center;
 justify-self: center;
+line-height: 175%;
 }
 
 h1{
@@ -157,6 +158,7 @@ h1{
     padding-bottom: 65px;
     margin: 0px;
     justify-content:left;
+    
 }
 
 
@@ -171,6 +173,7 @@ padding-top: 23px;
 padding-bottom: 23px;
 margin: 0px;
 justify-content:center;
+max-width: 600px;
 }
 
 footer {
